--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -16,7 +16,7 @@ jobs:
         sudo apt-get install -y cmake libsdl2-dev
     - name: Configure and build
       run: |
-        mkdir build
-        cd build
-        cmake .
-        cmake --build .
+            mkdir build
+            cd build
+            cmake ..
+            make
