--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -18,5 +18,5 @@ jobs:
       run: |
             mkdir build
             cd build
-            cmake -S . -B build
+            cmake -S . -B ..
             make
