--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -16,5 +16,7 @@ jobs:
         sudo apt-get install -y cmake libsdl2-dev
     - name: Configure and build
       run: |
+            pwd
+            ls
             cmake -S . -B build
             cmake --build build
